(executable
 (name       unittest)
 (libraries  test ppx_protocol_conv_jsonm)
)

(rule
 (targets unittest.output)
 (deps    unittest.exe)
 (action  (run %{deps}))
)

(rule
 (alias runtest)
 (package ppx_protocol_conv_jsonm)
 (deps unittest.expected unittest.output)
 (action (diff unittest.expected unittest.output))
)
