(executable
 (name       unittest)
 (libraries  test protocol_conv_msgpack sexplib)
 (preprocess (pps ppx_protocol_conv ppx_sexp_conv))
)

(rule
 (targets unittest.output)
 (deps    unittest.exe)
 (action  (run %{deps}))
)

(rule
 (alias runtest)
 (package ppx_protocol_conv_msgpack)
 (deps unittest.expected unittest.output)
 (action (diff unittest.expected unittest.output))
)
