(executable
 (name       unittest)
 (libraries  test protocol_conv_xml)
)

(rule
 (targets unittest.output)
 (deps    unittest.exe)
 (action  (run %{deps}))
)

(rule
 (alias runtest)
 (package ppx_protocol_conv_xml_light)
 (deps unittest.expected unittest.output)
 (action (diff unittest.expected unittest.output))
)
