(executable
 (name      unittest)
 (libraries test ppx_protocol_conv_yaml)
)

(rule
 (targets unittest.output)
 (deps    unittest.exe)
 (action  (run %{deps}))
)

(rule
 (alias runtest)
 (package ppx_protocol_conv_yaml)
 (deps unittest.expected unittest.output)
 (action (diff unittest.expected unittest.output))
)
